k8s-local/ingress/skillbridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: skillbridge-ingress
    annotations:
        nginx.ingress.kubernetes.io/websocket-services: messaging-service
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /users
                    pathType: Prefix
                    backend:
                        service:
                            name: user-service
                            port:
                                number: 3000
                  - path: /availability
                    pathType: Prefix
                    backend:
                        service:
                            name: availability-service
                            port:
                                number: 3001
                  - path: /messaging
                    pathType: Prefix
                    backend:
                        service:
                            name: messaging-service
                            port:
                                number: 3002
                  - path: /search
                    pathType: Prefix
                    backend:
                        service:
                            name: search-service
                            port:
                                number: 3003
                  - path: /bookings
                    pathType: Prefix
                    backend:
                        service:
                            name: booking-service
                            port:
                                number: 3004
                  - path: /files
                    pathType: Prefix
                    backend:
                        service:
                            name: file-service
                            port:
                                number: 3005
